--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,21 +1,58 @@
 {% load static %}
-<footer id="footer">
-    <div class="footer-copy">
-        <div class="container">
-            <div class="footer-copy-inner">
-                <div style="display: flex; align-items: center" >
-                    <img style="width: 40px; margin-right: 10px" src="{% static 'images/logo-white.svg' %}" alt="">
-                    <span style="color: #ffffff" class='logo-text'>wEbtOUCh</span>
+{#<footer id="footer">#}
+{#    <div class="footer-copy">#}
+{#        <div class="container">#}
+{#            <div class="footer-copy-inner">#}
+{#                <div style="display: flex; align-items: center" >#}
+{#                    <img style="width: 40px; margin-right: 10px" src="{% static 'images/logo-white.svg' %}" alt="">#}
+{#                    <span style="color: #ffffff" class='logo-text'>wEbtOUCh</span>#}
+{#                </div>#}
+{#                <div >#}
+{#                    <div class="copy-text">#}
+{#                        <p>© 2019. WebTouch. Все права защищены.</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</footer>#}
+<div id="footer">
+        <section class="colored-bg" data-custom-bg="#060F1E">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="icon-box align-center"><i class="hc-pin"></i>
+                  <div class="ib-content">
+                    <h4 class="upper">Visit Us</h4>
+                    <p>An ispiring place for you.</p><a class="arrow-link" href="#">Open Map</a>
+                  </div>
                 </div>
-                <div >
-                    <div class="copy-text">
+              </div>
+              <div class="col-sm-4">
+                <div class="icon-box align-center"><i class="hc-calendar"></i>
+                  <div class="ib-content">
+                    <h4 class="upper">Book a Session</h4>
+                    <p>The first session is free.</p><a class="arrow-link" href="#">Book Now</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="icon-box align-center"><i class="hc-help-buoy"></i>
+                  <div class="ib-content">
+                    <h4 class="upper">Any Question?</h4>
+                    <p>Contact our customer support.</p><a class="arrow-link" href="#">Send Email</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <div style="    text-align: center;
+    margin-top: 50px;
+" class="copy-text">
                         <p>© 2019. WebTouch. Все права защищены.</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+          </div>
+        </section>
+      </div>
 
 <script>
 
