--- a/templates/pages/price.html
+++ b/templates/pages/price.html
@@ -20,8 +20,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="title text-center">
-                                <h1>название кейса</h1>
-                                <h4>фильтр этого кейса</h4>
+                                <h1>Лендинг\Визитка</h1>
                             </div>
                         </div>
                     </div>
@@ -370,5 +369,6 @@
                 </div>
             </div>
         </section>
-        {% include 'pages/callback_form.html' %}
+    </div>
+
 {% endblock %}
