--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,7 +17,7 @@
 {#    </div>#}
 {#</footer>#}
 <div id="footer">
-        <section class="colored-bg" data-custom-bg="#060F1E">
+        <section style="padding-bottom: 20px" class="colored-bg" data-custom-bg="#060F1E">
           <div class="container">
             <div class="row">
               <div class="col-sm-4">
