--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -132,7 +132,7 @@
           <div class="row" data-negative-margin="150">
             <div class="enable-animation two-col with-spacing" id="works-grid">
                 {% for item in portfolioItems %}
-                    <div class="work-item with-hover">
+                    <div class="work-item">
                         <div class="work-detail">
                           <a href="{% url 'portfolio-item' item.name_slug %}">
                             <img src="{{ item.image.url }}" alt="">
@@ -166,7 +166,7 @@
   </svg></div>
                   </div>
                   <div class="counter-content">
-                    <h5><span class="number-count" data-count="125">125</span></h5><span>Satisfied Clients</span>
+                    <h5><span class="number-count" data-count="500">500</span>+</h5><span>Выпито Чашек Кофе</span>
                   </div>
                 </div>
               </div>
@@ -187,7 +187,7 @@
   </svg></div>
                   </div>
                   <div class="counter-content">
-                    <h5><span class="number-count" data-count="45">45</span></h5><span>Projects a Year</span>
+                    <h5><span class="number-count" data-count="100">100</span>+</h5><span>Внедрено Правок</span>
                   </div>
                 </div>
               </div>
@@ -208,7 +208,7 @@
   </svg></div>
                   </div>
                   <div class="counter-content">
-                    <h5><span class="number-count" data-count="970">970</span></h5><span>Support Tickets</span>
+                    <h5><span class="number-count" data-count="18">18</span>часов</h5><span>Минимальное время создания сайта</span>
                   </div>
                 </div>
               </div>
@@ -225,7 +225,7 @@
   </svg></div>
                   </div>
                   <div class="counter-content">
-                    <h5><span class="number-count" data-count="190">190</span></h5><span>Blog Posts</span>
+                    <h5><span class="number-count" data-count="50">50</span>+</h5><span>Довольных Клиентов</span>
                   </div>
                 </div>
               </div>
