--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -29,7 +29,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section style="padding-top: 40px">
 
           <div class="row">
             <ul id="filters">
