--- a/static/css/style6.css
+++ b/static/css/style6.css
@@ -83,13 +83,13 @@ a.small-link > i {
   transition: all .3s ease;
 }
 a.small-link.black-text:hover {
-  color: #00c3da !important;
+  color: #153F8F !important;
 }
 a.small-link:hover > i {
   margin-left: 7px;
 }
 a.white-text:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 a.arrow-link {
   font-family: 'MagistralC', sans-serif;
@@ -280,14 +280,14 @@ section.parallax-section .parallax-overlay.gradient-overlay {
   opacity: .9;
 }
 section.parallax-section .parallax-overlay.gradient-overlay:not([data-gradients]) {
-  background: -webkit-linear-gradient(left, #cf93ff 0%, #00c3da 100%);
-  background: linear-gradient(90deg, #cf93ff 0%, #00c3da 100%);
+  background: -webkit-linear-gradient(left, #cf93ff 0%, #153F8F 100%);
+  background: linear-gradient(90deg, #cf93ff 0%, #153F8F 100%);
 }
 section.parallax-section .parallax-overlay.semilight-overlay {
   opacity: .5;
 }
 section.parallax-section .parallax-overlay.colored-overlay {
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 section.parallax-section.text-dark .parallax-overlay {
   opacity: .1;
@@ -436,7 +436,7 @@ section.page-title .bp-desktop({
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
   display: inline-block;
-  background-color: #00c3da;
+  background-color: #153F8F;
   clear: both;
   color: #fff;
 }
@@ -464,7 +464,7 @@ section.page-title .bp-desktop({
   border-color: #e6e6e6;
 }
 .title > hr.colored {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 .title > hr.white {
   border-color: #fff;
@@ -865,7 +865,7 @@ section.page-title .bp-desktop({
   transform: scale(1);
 }
 .go-top:hover {
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 .go-top a {
   color: #929292;
@@ -1025,13 +1025,13 @@ section.page-title .bp-desktop({
   border-color: transparent;
 }
 .boxed-tabs > li.active {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 .boxed-tabs > li.active > a,
 .boxed-tabs > li.active > a:focus,
 .boxed-tabs > li.active > a:hover {
   border: 0;
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
   cursor: pointer;
   outline: none;
@@ -1148,7 +1148,7 @@ section.page-title .bp-desktop({
   opacity: 1;
   border: 0;
   background-color: transparent;
-  color: #00c3da;
+  color: #153F8F;
   cursor: pointer;
   outline: none;
 }
@@ -1285,7 +1285,7 @@ section.parallax-section .slick-dots > li:not(.slick-active) > button {
 }
 .slick-slider:not(#home-slider):not(#product-slider-nav) .slick-prev:hover,
 .slick-slider:not(#home-slider):not(#product-slider-nav) .slick-next:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 .slick-slider:not(#home-slider):not(#product-slider-nav) .slick-prev i,
 .slick-slider:not(#home-slider):not(#product-slider-nav) .slick-next i {
@@ -1328,7 +1328,7 @@ section.parallax-section .slick-dots > li:not(.slick-active) > button {
   border-radius: 50%;
 }
 .slick-dots > li.slick-active > button {
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 .dark-dots .slick-dots > li.slick-active > button {
   background-color: #1f1f1f;
@@ -1351,16 +1351,16 @@ section.parallax-section .slick-dots > li:not(.slick-active) > button {
   margin-bottom: 20px;
 }
 .accordion > li.active .accordion-title {
-  color: #00c3da;
-  border-color: #00c3da;
+  color: #153F8F;
+  border-color: #153F8F;
 }
 .accordion > li.active .accordion-title h4 {
-  color: #00c3da;
+  color: #153F8F;
 }
 .accordion > li.active .accordion-title:before {
   content: "\e0e9";
-  color: #00c3da;
-  border-color: #00c3da;
+  color: #153F8F;
+  border-color: #153F8F;
 }
 .accordion.dark-skin > li.active .accordion-title {
   color: #1f1f1f;
@@ -1437,7 +1437,7 @@ section.parallax-section .slick-dots > li:not(.slick-active) > button {
   vertical-align: middle;
   font-size: 18px;
   margin-right: 10px;
-  color: #00c3da;
+  color: #153F8F;
 }
 .check-list.dark-skin > li:before {
   color: #1f1f1f;
@@ -1466,8 +1466,8 @@ section.parallax-section .slick-dots > li:not(.slick-active) > button {
 }
 .tagcloud a:hover,
 .post-tags a:hover {
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   color: #fff;
 }
 section.dark-bg .progress,
@@ -1489,7 +1489,7 @@ section.colored-bg .progress-bar:not(.colored) {
   box-shadow: none;
 }
 .progress-bar.colored {
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 .skill {
   position: relative;
@@ -1728,8 +1728,8 @@ section.gradient-bg {
   border: 0;
 }
 section.gradient-bg:not([data-gradients]) {
-  background: -webkit-linear-gradient(left, #cf93ff 0%, #00c3da 100%);
-  background: linear-gradient(90deg, #cf93ff 0%, #00c3da 100%);
+  background: -webkit-linear-gradient(left, #cf93ff 0%, #153F8F 100%);
+  background: linear-gradient(90deg, #cf93ff 0%, #153F8F 100%);
 }
 .gradient-bg-wrapper,
 .gradient-bg-element {
@@ -1830,7 +1830,7 @@ section.gradient-bg:not([data-gradients]) {
   color: #fff;
 }
 .social-list > li > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 .social-list > li > a i {
   line-height: inherit;
@@ -1918,11 +1918,11 @@ section.gradient-bg:not([data-gradients]) {
   color: #fff;
 }
 #search-modal .search-form ::-moz-selection {
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
 }
 #search-modal .search-form ::selection {
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
 }
 #search-modal .search-form .form-control {
@@ -1938,10 +1938,10 @@ section.gradient-bg:not([data-gradients]) {
   line-height: 60px;
 }
 #search-modal .search-form .form-control:focus {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 #search-modal .search-form .form-control:focus + .input-group-btn .btn {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 #search-modal .search-form .btn {
   background-color: transparent;
@@ -2041,7 +2041,7 @@ section.gradient-bg:not([data-gradients]) {
   margin-bottom: 15px;
 }
 .job-content a {
-  color: #00c3da;
+  color: #153F8F;
 }
 .images-gallery.slick-slider:hover .slick-prev,
 .images-gallery.slick-slider:hover .slick-next {
@@ -2323,7 +2323,7 @@ section.gradient-bg:not([data-gradients]) {
 }
 .btn-color {
   color: #fff;
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 .btn-color:hover,
 .btn-color:active {
@@ -2334,28 +2334,28 @@ section.gradient-bg:not([data-gradients]) {
   color: #fff;
 }
 .btn-color-out {
-  color: #00c3da;
-  border-color: #00c3da;
+  color: #153F8F;
+  border-color: #153F8F;
   background-color: transparent;
 }
 .btn-color-out:hover,
 .btn-color-out:active {
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   color: #fff;
 }
 .btn-color-out:focus {
-  color: #00c3da;
+  color: #153F8F;
 }
 .btn-gradient {
   color: #fff;
-  background: -webkit-linear-gradient(290deg, #00c3da 0%, #cf93ff 100%);
-  background: linear-gradient(160deg, #00c3da 0%, #cf93ff 100%);
+  background: -webkit-linear-gradient(290deg, #153F8F 0%, #cf93ff 100%);
+  background: linear-gradient(160deg, #153F8F 0%, #cf93ff 100%);
 }
 .btn-gradient:hover,
 .btn-gradient:active {
-  background: -webkit-linear-gradient(290deg, #00c3da 0%, #cf93ff 100%);
-  background: linear-gradient(160deg, #00c3da 0%, #cf93ff 100%);
+  background: -webkit-linear-gradient(290deg, #153F8F 0%, #cf93ff 100%);
+  background: linear-gradient(160deg, #153F8F 0%, #cf93ff 100%);
   color: #fff;
 }
 .btn-gradient:focus {
@@ -2596,8 +2596,8 @@ section.gradient-bg:not([data-gradients]) {
   height: 35px;
   line-height: 35px;
   min-height: 0;
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   border-radius: 4px;
   color: #fff;
   -webkit-transition: all .3s ease;
@@ -3715,8 +3715,8 @@ section.section-skewed.section-bordered #home-slider:after {
   opacity: .7;
 }
 .slide-wrap.gradient-overlay:not([data-gradients]):before {
-  background: -webkit-linear-gradient(left, #cf93ff 0%, #00c3da 100%);
-  background: linear-gradient(90deg, #cf93ff 0%, #00c3da 100%);
+  background: -webkit-linear-gradient(left, #cf93ff 0%, #153F8F 100%);
+  background: linear-gradient(90deg, #cf93ff 0%, #153F8F 100%);
 }
 .slide-wrap.gradient-overlay .gradient-bg-wrapper {
   opacity: .55;
@@ -3995,7 +3995,7 @@ section.section-skewed.section-bordered #home-slider:after {
 }
 .animated-icon.colored svg,
 .animated-icon.colored svg * {
-  stroke: #00c3da;
+  stroke: #153F8F;
 }
 .animated-icon.white svg,
 .animated-icon.white svg * {
@@ -4043,7 +4043,7 @@ section.section-skewed.section-bordered #home-slider:after {
   margin-bottom: 15px;
 }
 .icon-box > i.colored {
-  color: #00c3da !important;
+  color: #153F8F !important;
 }
 .icon-box .ib-icon {
   position: relative;
@@ -4056,7 +4056,7 @@ section.section-skewed.section-bordered #home-slider:after {
   transition: all .3s ease;
   display: block;
   margin-bottom: 25px;
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
 }
 .icon-box .ib-icon.size-small {
@@ -4208,7 +4208,7 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #1f1f1f;
 }
 .icon-box-side i.colored {
-  color: #00c3da;
+  color: #153F8F;
 }
 .icon-box-side p.serif-font {
   font-size: 15px;
@@ -4218,7 +4218,7 @@ section.section-skewed.section-bordered #home-slider:after {
   left: 0;
   height: 55px;
   width: 55px;
-  border: 1px solid #00c3da;
+  border: 1px solid #153F8F;
   border-radius: 50%;
   text-align: center;
   line-height: 55px;
@@ -4234,7 +4234,7 @@ section.section-skewed.section-bordered #home-slider:after {
   left: -2px;
   padding: 2px;
   z-index: -1;
-  background: #00c3da;
+  background: #153F8F;
   border-radius: 50%;
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
@@ -4333,7 +4333,7 @@ section.section-skewed.section-bordered #home-slider:after {
   position: relative;
   width: 90px;
   height: 90px;
-  border: 2px solid #00c3da;
+  border: 2px solid #153F8F;
   background-color: transparent;
   line-height: 86px;
   text-align: center;
@@ -4351,8 +4351,8 @@ section.section-skewed.section-bordered #home-slider:after {
   transition: all .3s ease;
 }
 .number-box:hover > .number-wrap {
-  border-color: #00c3da;
-  background-color: #00c3da;
+  border-color: #153F8F;
+  background-color: #153F8F;
   -webkit-transform: scale(0.9);
   transform: scale(0.9);
 }
@@ -4389,7 +4389,7 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #1f1f1f;
 }
 .icon-box-simple i.colored {
-  color: #00c3da;
+  color: #153F8F;
 }
 .icon-box-simple i:before {
   vertical-align: middle;
@@ -4480,15 +4480,15 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #6c6c6c;
 }
 .footer-widgets .widget ul > li > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 .footer-widgets .widget .tagcloud a {
   border-color: #c5c5c5;
   color: #5f5f5f;
 }
 .footer-widgets .widget .tagcloud a:hover {
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   color: #fff;
 }
 @media only screen and (max-width: 991px) {
@@ -4546,7 +4546,7 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #bbb;
 }
 #footer.dark-footer .footer-widgets .widget ul > li > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 #footer.dark-footer .footer-widgets .widget .tagcloud a {
   color: #fff;
@@ -4606,7 +4606,7 @@ section.section-skewed.section-bordered #home-slider:after {
   /*border-bottom: 1px solid #1f1f1f;*/
 }
 #filters li.active:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 #filters.dark-skin li.active {
   border-color: #1f1f1f;
@@ -4678,7 +4678,7 @@ section.section-skewed.section-bordered #home-slider:after {
   opacity: 1;
 }
 .work-item:hover .work-info-alt h3 > a {
-  color: #00c3da;
+  color: #153F8F;
 }
 .work-info {
   position: absolute;
@@ -4766,7 +4766,7 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #1f1f1f;
 }
 .project-info > ul > li > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 .projects-controller a {
   display: block;
@@ -4832,7 +4832,7 @@ section.section-skewed.section-bordered #home-slider:after {
   letter-spacing: 0.05em;
 }
 .projects-controller a > span:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 .projects-controller a > span i {
   font-size: 20px;
@@ -5082,11 +5082,11 @@ section.section-skewed.section-bordered #home-slider:after {
   width: 100%;
 }
 .post-preview.show-all-posts:hover {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 .post-preview.show-all-posts:hover .icon-box i,
 .post-preview.show-all-posts:hover .icon-box h4 {
-  color: #00c3da;
+  color: #153F8F;
 }
 .pagination,
 .page-numbers {
@@ -5160,16 +5160,16 @@ section.section-skewed.section-bordered #home-slider:after {
 .page-numbers > li > a.current-page,
 .pagination > li span.current-page,
 .page-numbers > li span.current-page {
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   color: #fff;
 }
 .pagination > li > a.current-page:focus,
 .page-numbers > li > a.current-page:focus,
 .pagination > li span.current-page:focus,
 .page-numbers > li span.current-page:focus {
-  background-color: #00c3da;
-  border-color: #00c3da;
+  background-color: #153F8F;
+  border-color: #153F8F;
   color: #fff;
 }
 @media only screen and (max-width: 991px) {
@@ -5248,7 +5248,7 @@ section.section-skewed.section-bordered #home-slider:after {
 }
 .side-post .side-post-image .post-category > a {
   display: block;
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
   border-radius: 5px;
   padding: 6px 16px;
@@ -5409,7 +5409,7 @@ section.section-skewed.section-bordered #home-slider:after {
   background-color: #1f1f1f;
 }
 .card-post .card-post-wrapper.colored-bg {
-  background-color: #00c3da;
+  background-color: #153F8F;
 }
 .card-post .card-post-wrapper.dark-bg .post-footer,
 .card-post .card-post-wrapper.colored-bg .post-footer,
@@ -5474,7 +5474,7 @@ section.section-skewed.section-bordered #home-slider:after {
 }
 .card-post .card-post-image .post-category > a {
   display: block;
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
   border-radius: 5px;
   padding: 6px 16px;
@@ -5564,7 +5564,7 @@ section.section-skewed.section-bordered #home-slider:after {
   font-size: 13px;
 }
 #sidebar .widget ul > li > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 #sidebar .widget ul > li:before {
   content: " • ";
@@ -6033,7 +6033,7 @@ section.section-skewed.section-bordered #home-slider:after {
   margin-left: 2px;
 }
 .single-product-list .product_meta p > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 #product-slider {
   margin-bottom: 50px;
@@ -6058,9 +6058,9 @@ section.section-skewed.section-bordered #home-slider:after {
 .product-tabs .minimal-tabs > li.active > a,
 .product-tabs .minimal-tabs > li.active > a:focus,
 .product-tabs .minimal-tabs > li.active > a:hover {
-  border-top: 2px solid #00c3da;
+  border-top: 2px solid #153F8F;
   border-bottom: 0;
-  color: #00c3da;
+  color: #153F8F;
 }
 .related-products .shop-product {
   margin-bottom: 0;
@@ -6135,7 +6135,7 @@ section.section-skewed.section-bordered #home-slider:after {
   color: #1f1f1f;
 }
 #shopping-cart > tbody > tr > td > a:hover {
-  color: #00c3da;
+  color: #153F8F;
 }
 #shopping-cart > tbody > tr > td > .form-control {
   width: 60px;
@@ -6293,7 +6293,7 @@ section.section-skewed.section-bordered #home-slider:after {
 }
 .shopping-cart .product-list li .product-summary .remove:hover {
   background-color: transparent;
-  color: #00c3da !important;
+  color: #153F8F !important;
 }
 .shopping-cart .product-list li.empty {
   font-size: 14px;
@@ -6335,7 +6335,7 @@ section.section-skewed.section-bordered #home-slider:after {
 .cart-open .cart-number {
   position: absolute;
   font-size: 9px;
-  background-color: #00c3da;
+  background-color: #153F8F;
   top: 12px;
   right: 6px;
   line-height: 1;
@@ -6479,8 +6479,8 @@ section.dark-bg .timeline .timeline-content:before {
   margin-bottom: 0;
 }
 .timeline > li:hover .timeline-content:before {
-  background-color: #00c3da;
-  box-shadow: 0 0 0 1px #00c3da;
+  background-color: #153F8F;
+  box-shadow: 0 0 0 1px #153F8F;
 }
 .timeline > li:hover .timeline-content .timeline-date {
   margin-left: -16px;
@@ -6533,7 +6533,7 @@ section.dark-bg .timeline .timeline-content:before {
   margin-bottom: 15px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #00c3da;
+  background-color: #153F8F;
   height: 22px;
   line-height: 22px;
   margin-left: -12px;
@@ -6545,7 +6545,7 @@ section.dark-bg .timeline .timeline-content:before {
   position: absolute;
   display: block;
   bottom: 0;
-  border: 11px solid #00c3da;
+  border: 11px solid #153F8F;
   z-index: -1;
   left: -12px;
   border-right-width: 11px;
@@ -6560,7 +6560,7 @@ section.dark-bg .pricing-table {
   border-color: #050505;
 }
 section.dark-bg .pricing-table.featured {
-  border-color: #00c3da;
+  border-color: #153F8F;
 }
 section.dark-bg .pricing-table .price h2 span {
   color: #fff;
@@ -6609,7 +6609,7 @@ section.grey-bg .pricing-table {
   z-index: 20;
 }
 .pricing-table.featured .price h2 {
-  color: #00c3da;
+  color: #153F8F;
 }
 .pricing-table .featured-label {
   position: absolute;
@@ -6620,7 +6620,7 @@ section.grey-bg .pricing-table {
   font-weight: 500;
   letter-spacing: 0.05em;
   text-transform: uppercase;
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
   padding: 5px 10px;
   border-radius: 15px;
@@ -7413,12 +7413,12 @@ img.zoom-img {
   background-repeat: repeat;
 }
 .gradient {
-  background: -webkit-linear-gradient(left, #cf93ff 0%, #00c3da 100%);
-  background: linear-gradient(90deg, #cf93ff 0%, #00c3da 100%);
+  background: -webkit-linear-gradient(left, #cf93ff 0%, #153F8F 100%);
+  background: linear-gradient(90deg, #cf93ff 0%, #153F8F 100%);
 }
 .gradient-text:not([data-gradients]) {
-  background: -webkit-linear-gradient(left, #cf93ff 0%, #00c3da 100%);
-  background: linear-gradient(90deg, #cf93ff 0%, #00c3da 100%);
+  background: -webkit-linear-gradient(left, #cf93ff 0%, #153F8F 100%);
+  background: linear-gradient(90deg, #cf93ff 0%, #153F8F 100%);
 }
 .gradient-text {
   -webkit-background-clip: text;
@@ -7447,7 +7447,7 @@ img.zoom-img {
   height: 100vh;
 }
 .colored-bg {
-  background-color: #00c3da;
+  background-color: #153F8F;
   color: #fff;
 }
 .d-b {
@@ -7705,7 +7705,7 @@ img.zoom-img {
   color: #fff!important;
 }
 .colored-text {
-  color: #00c3da !important;
+  color: #153F8F !important;
 }
 .gold-text {
   color: #c29848 !important;
@@ -7837,5 +7837,5 @@ img.zoom-img {
 }
 .preview-icon:hover code,
 .preview-icon:hover i {
-  color: #00c3da;
+  color: #153F8F;
 }
